@@ -1,6 +1,6 @@
 ;;; python-components-up-down.el -- Searching up/downwards in buffer
 
-;; Copyright (C) 2015-2016 Andreas Röhler
+;; Copyright (C) 2015-2016  Andreas Röhler
 
 ;; Author: Andreas Röhler <andreas.roehler@online.de>
 ;; Keywords: languages, convenience
@@ -54,34 +54,17 @@ Return position if statement found, nil otherwise. "
 	   (when (and py-verbose-p (called-interactively-p 'any)) (message "%s" erg))
 	   erg))
 
-(defun py--up-base-intern (regexp indent)
-  (while (and (not (bobp))(re-search-backward regexp nil t 1)
-	      (or (nth 8 (parse-partial-sexp (point-min) (point))))
-	      (<= indent (current-indentation)))))
-
-(defun py-up-base (regexp &optional indent)
-  "Go to the beginning of lower indented form upwards.
+(defun py-up-base (regexp)
+  "Go to the beginning of next form upwards in buffer.
 
 Return position if form found, nil otherwise. "
-  (unless (bobp)
-    (let* ((orig (point))
-	   (pps (parse-partial-sexp (point-min) (point)))
-	   (indent indent))
-      (if indent
-	  (py--up-base-intern regexp indent)
-	(setq indent (cond ((and (looking-at regexp)
-				 (not (nth 8 pps))
-				 (eq (current-column) (current-indentation)))
-			    (current-indentation))
-			   (t (setq indent (current-indentation))
-			      (py--up-base-intern regexp indent)
-			      (when (and (looking-at regexp)
-					 (not (nth 8 pps))
-					 (eq (current-column) (current-indentation)))
-				(current-column)))))
-	(if indent
-	    (py-up-base regexp indent)
-	  (error "py-up-base: no indent found")))
+  (let* ((orig (point))
+         erg)
+    (if (bobp)
+        (setq erg nil)
+      (while (and (re-search-backward regexp nil t 1)
+                  (nth 8 (parse-partial-sexp (point-min) (point)))))
+      (back-to-indentation)
       (when (looking-at regexp) (setq erg (point)))
       (when py-verbose-p (message "%s" erg))
       erg)))
@@ -137,6 +120,7 @@ Return position if form found, nil otherwise. "
         (when py-verbose-p (message "%s" erg))
         erg))))
 
+(defalias 'py-up-block 'py-block-up)
 (defun py-up-block ()
   "Go to the beginning of next block upwards in buffer.
 
@@ -144,6 +128,7 @@ Return position if block found, nil otherwise. "
   (interactive)
   (py-up-base py-block-re))
 
+(defalias 'py-up-block-or-clause 'py-block-or-clause-up)
 (defun py-up-block-or-clause ()
   "Go to the beginning of next block-or-clause upwards in buffer.
 
@@ -151,6 +136,7 @@ Return position if block-or-clause found, nil otherwise. "
   (interactive)
   (py-up-base py-block-or-clause-re))
 
+(defalias 'py-up-class 'py-class-up)
 (defun py-up-class ()
   "Go to the beginning of next class upwards in buffer.
 
@@ -158,6 +144,7 @@ Return position if class found, nil otherwise. "
   (interactive)
   (py-up-base py-class-re))
 
+(defalias 'py-up-clause 'py-clause-up)
 (defun py-up-clause ()
   "Go to the beginning of next clause upwards in buffer.
 
@@ -165,6 +152,7 @@ Return position if clause found, nil otherwise. "
   (interactive)
   (py-up-base py-clause-re))
 
+(defalias 'py-up-def 'py-def-up)
 (defun py-up-def ()
   "Go to the beginning of next def upwards in buffer.
 
@@ -172,6 +160,7 @@ Return position if def found, nil otherwise. "
   (interactive)
   (py-up-base py-def-re))
 
+(defalias 'py-up-def-or-class 'py-def-or-class-up)
 (defun py-up-def-or-class ()
   "Go to the beginning of next def-or-class upwards in buffer.
 
@@ -179,6 +168,7 @@ Return position if def-or-class found, nil otherwise. "
   (interactive)
   (py-up-base py-def-or-class-re))
 
+(defalias 'py-up-minor-block 'py-minor-block-up)
 (defun py-up-minor-block ()
   "Go to the beginning of next minor-block upwards in buffer.
 
@@ -186,6 +176,7 @@ Return position if minor-block found, nil otherwise. "
   (interactive)
   (py-up-base py-minor-block-re))
 
+(defalias 'py-up-section 'py-section-up)
 (defun py-up-section ()
   "Go to the beginning of next section upwards in buffer.
 
@@ -193,6 +184,7 @@ Return position if section found, nil otherwise. "
   (interactive)
   (py-up-base py-section-re))
 
+(defalias 'py-down-block 'py-block-down)
 (defun py-down-block ()
   "Go to the beginning of next block below in buffer.
 
@@ -200,6 +192,7 @@ Return position if block found, nil otherwise. "
   (interactive)
   (py-down-base py-block-re))
 
+(defalias 'py-down-block-or-clause 'py-block-or-clause-down)
 (defun py-down-block-or-clause ()
   "Go to the beginning of next block-or-clause below in buffer.
 
@@ -207,6 +200,7 @@ Return position if block-or-clause found, nil otherwise. "
   (interactive)
   (py-down-base py-block-or-clause-re))
 
+(defalias 'py-down-class 'py-class-down)
 (defun py-down-class ()
   "Go to the beginning of next class below in buffer.
 
@@ -214,6 +208,7 @@ Return position if class found, nil otherwise. "
   (interactive)
   (py-down-base py-class-re))
 
+(defalias 'py-down-clause 'py-clause-down)
 (defun py-down-clause ()
   "Go to the beginning of next clause below in buffer.
 
@@ -221,6 +216,7 @@ Return position if clause found, nil otherwise. "
   (interactive)
   (py-down-base py-clause-re))
 
+(defalias 'py-down-def 'py-def-down)
 (defun py-down-def ()
   "Go to the beginning of next def below in buffer.
 
@@ -228,6 +224,7 @@ Return position if def found, nil otherwise. "
   (interactive)
   (py-down-base py-def-re))
 
+(defalias 'py-down-def-or-class 'py-def-or-class-down)
 (defun py-down-def-or-class ()
   "Go to the beginning of next def-or-class below in buffer.
 
@@ -235,6 +232,7 @@ Return position if def-or-class found, nil otherwise. "
   (interactive)
   (py-down-base py-def-or-class-re))
 
+(defalias 'py-down-minor-block 'py-minor-block-down)
 (defun py-down-minor-block ()
   "Go to the beginning of next minor-block below in buffer.
 
@@ -242,6 +240,7 @@ Return position if minor-block found, nil otherwise. "
   (interactive)
   (py-down-base py-minor-block-re))
 
+(defalias 'py-down-section 'py-section-down)
 (defun py-down-section ()
   "Go to the beginning of next section below in buffer.
 
